--- a/style.css
+++ b/style.css
@@ -76,23 +76,43 @@ ul {
   color: var(--secondary-text-color);
 } 
 
-/* hero */
+/* герой */
 .hero{
 background-color: var(--hero-background);
+padding-top: 200px;
+padding-bottom: 200px;
 }
 
+.hero .container{
+  text-align: center;
+}
+
+
 h1{
+  width: 696px;
+
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 30px;
+
   font-weight: 900;
   font-size: 44px;
   line-height: 60px;
   letter-spacing: 0.06em;
-  text-align: center;
   text-transform: uppercase;
   
   color: var(--background-color);
 }
 
 .hero-button{
+justify-content: center;
+align-items: center;
+
+border: none;
+border-radius: 4px;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+padding: 10px 32px;
+
   font-weight: 700;
   font-size: 16px;
   line-height: 30px;
@@ -102,8 +122,25 @@ h1{
   color: var(--background-color);
   background-color: var(--accent-color);
 }
+/* переваги */
+.advantages{
+display: flex;
+justify-content: space-between;
+}
 
-.advantages-title{
+
+.advantages .item{
+  width: 270;
+  padding: 30px;
+}
+
+.advantages .title{
+  font-weight: 700;
+ 
+}
+
+.advantages .title,
+.advantages .text{
   font-weight: 700;
   font-size: 14px;
   line-height: 16px;
@@ -127,10 +164,12 @@ h1{
 /* Чим ми займаємось */
 .what-we-do{
   display: flex;
+  justify-content:space-between;
+
 
 }
-.what-we-do img{
-  width: 270px;
+.img-what-we-do{
+  width: 370px;
 }
 
 .name{
@@ -141,9 +180,10 @@ h1{
 }
 
 .job{
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 19px;
+  text-align: center;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 42px;
   text-align: center;
 
   color: var(--secondary-text-color);
@@ -166,9 +206,7 @@ font-size: 14px;
 line-height: 24px;
 color: rgba(255, 255, 255, 0.6);
 }
-.section{
-  
-}
+
 .container header{ 
   display: flex;
   justify-content: center;
@@ -204,7 +242,6 @@ margin-left: auto;
 
 ul,
 p,
-h1,
 h2,
 h3,
 li{
