--- a/style.css
+++ b/style.css
@@ -171,20 +171,24 @@ justify-content: space-between;
 .img-what-we-do{
   width: 370px;
 }
-
+/* наша команда */
 .name{
   font-weight: 500;
   font-size: 16px;
   line-height: 19px;
   text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
 .job{
   text-align: center;
-  font-weight: 700;
-  font-size: 36px;
+  font-weight: 400;
+  font-size: 16px;
   line-height: 42px;
   text-align: center;
+  display: flex;
+  justify-content: center;
 
   color: var(--secondary-text-color);
 }
@@ -259,3 +263,10 @@ margin-left: auto;
 margin-right: auto;
 
 }
+.img{
+  width: 270px; ;
+  display: flex;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-left: auto;
+  margin-right: auto;}
