--- a/portfolio.css
+++ b/portfolio.css
@@ -34,3 +34,123 @@
     padding: 12px;
     
   }
+  .buttons-list .list-item{
+    margin-left: 30px;
+    display: flex;
+            justify-content: center;
+            width: calc((100% - 10 * 8) / 5);
+  }
+  .button{
+    padding: 6px 25px;
+justify-content: space-between;
+    text-align: center;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+    letter-spacing: 0.03em;
+    background: #FFFFFF;
+    border-radius: 4px;
+  }
+.section{
+  padding-bottom: 94px;
+  padding-top: 94px;
+}
+.container {
+  /* outline: solid 3px red; */
+  display: flex;
+  justify-content: center;
+  flex-wrap: nowrap;
+  margin: -8px;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.container.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+color: var(--primary-text-color);
+  padding-top: 24px;
+  padding-bottom: 25px;
+}
+
+.header nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+  .button:hover,
+  .button:focus{
+    background-color: var(--accent-color);
+    color: var(--background-color);
+
+    box-shadow: 8px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.8), 0px 2px;
+border-radius: 4px;}
+
+.nav-list{
+  display: flex;
+  margin-left: 93px;
+  justify-content: center;
+
+}
+ul,
+p,
+h1,
+h2,
+h3{
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.link{
+  display: flex;
+  margin-left: 93px;
+}
+.addres{
+  display: flex;
+  justify-content: flex-end;
+}
+.footer{ background-color: var(--hero-background);}
+  .footer .logo>span{color: var(--background-color);}
+  
+  address{
+   font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  color: var(--background-color);
+  }
+  .footer.contacts-link{
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  color: rgba(255, 255, 255, 0.6);
+  }
+
+
+  .links-list{
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+  .foto-items{
+    width: calc((100% - 6 * 15px) / 3);
+    margin: 15px;
+  }
+  button{
+    justify-content: center;
+    align-items: center;
+    color: #757575;
+    border: none;
+    border-radius: 4px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    padding: 10px 32px;
+
+      font-weight: 700;
+      font-size: 16px;
+      line-height: 30px;
+      letter-spacing: 0.06em;
+      text-align: center;}
+  
