--- a/style.css
+++ b/style.css
@@ -29,6 +29,11 @@
     list-style: none;
   }
   
+.section{
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
   /* header */
   .logo {
     font-family: 'Raleway', sans-serif;
@@ -136,7 +141,7 @@
   
   .advantages .title{
     font-weight: 700;
-   
+   margin-bottom: 10px;
   }
   
   .advantages .title,
@@ -151,7 +156,12 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 24px;
-  
+    text-transform: uppercase;
+    font-weight: 400; font-size: 14px;
+    line-height: 24px; 
+    letter-spacing: 0.03em;
+   color: #757575;
+    
     color: var(--secondary-text-color);
   }
   
@@ -160,6 +170,7 @@
     font-size: 36px;
     line-height: 42px;
     text-align: center;
+    margin-bottom: 50px;
   }
   /* Чим ми займаємось */
   .what-we-do{
@@ -172,17 +183,21 @@
   /* наша команда */
   .team-list{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    
   }
   
-  
+  .border{
+box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),0px 2px 1px rgba(O, 0, 0, 0.2);
+border-radius: 0px 0px 4px
+4px;
+  }
   .name{
     font-weight: 500;
     font-size: 16px;
     line-height: 19px;
     text-align: center;
-    display: flex;
-    justify-content: center;
+   margin-bottom: 10px;
   }
   
   .job{
@@ -199,6 +214,15 @@
   
   
   /* футер */
+  .section-footer{
+    padding-bottom: 60px;
+    padding-top: 60px;
+    background-color: #2F303A;
+    
+  }
+  .section-footer .contacts-list{
+    display: block;
+  }
   .footer{ background-color: var(--hero-background);}
   .footer .logo>span{color: var(--background-color);}
   
@@ -224,7 +248,14 @@
     padding-bottom: 25px;
   
   }
+header{
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+
   .header nav{
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -271,8 +302,6 @@
   .img{
     width: 270px; ;
     display: flex;
-    margin-left: 15px;
-    margin-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-bottom: 30px;
+
   }
