--- a/portfolio.css
+++ b/portfolio.css
@@ -37,11 +37,13 @@ ul{
   display: flex;
   justify-content: center;
 }
-.buttons-list .list-item:not(:first-child){ 
+.buttons-list .btn-item:not(:first-child){ 
+
   margin-left: 30px;
           width: calc((100% - 10 * 8) / 5);
 }
 .button{
+margin: 8px;
   padding: 6px 25px;
 justify-content: space-between;
   text-align: center;
@@ -79,8 +81,7 @@ padding-bottom: 25px;
     background-color: var(--accent-color);
     color: var(--background-color);
 
-    box-shadow: 8px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.8), 0px 2px;
-border-radius: 4px;}
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);}
 
 /* .nav-list{
   display: flex;
@@ -124,11 +125,11 @@ h3{
       display: flex;
       flex-wrap: wrap;
       margin: -15px;
+    
     }
-    .foto-items{
-      width: calc((100% - 6 * 15px) / 3);
-      margin: 15px;
-    }
+    .links-list li{width: calc((100% - 6*15px)/3);
+    margin: 15px;}
+    
     button{
       justify-content: center;
       align-items: center;
