--- a/style.css
+++ b/style.css
@@ -223,6 +223,7 @@ border-radius: 0px 0px 4px
   .section-footer .contacts-list{
     display: block;
   }
+  
   .footer{ background-color: var(--hero-background);}
   .footer .logo>span{color: var(--background-color);}
   
@@ -288,7 +289,9 @@ header{
     padding: 0;
     margin: 0;
   }
-  
+  .section .our-team{
+    background-color: #F5F4FA;
+  }
   .container{
     
     width: 1200px;
