--- a/style.css
+++ b/style.css
@@ -255,10 +255,8 @@ header{
 }
 
 
-  .header nav{
-
+  .header {
     display: flex;
-    justify-content: center;
     align-items: center;
   }
   .header.nav{
