--- a/style.css
+++ b/style.css
@@ -222,6 +222,8 @@ border-radius: 0px 0px 4px
   }
   .section-footer .contacts-list{
     display: block;
+    padding-left: 2px;
+    
   }
   
   .footer{ background-color: var(--hero-background);}
@@ -282,7 +284,7 @@ header{
   p,
   h2,
   h3,
-  li{
+  {
     list-style: none;
     padding: 0;
     margin: 0;
@@ -292,13 +294,9 @@ header{
   }
   .container{
     
-    width: 1200px;
-  margin-left: 15px;
-  margin-right: 15px;
+  width: 1200px;
   margin-left: auto;
   margin-right: auto;
-  flex-direction: row-reverse;
-  justify-content: center;
   }
   .img{
     width: 270px; ;
@@ -306,3 +304,12 @@ header{
     margin-bottom: 30px;
 
   }
+nav{
+display: flex;
+align-items: center;
+}
+.border{
+  background: #FFFFFF;
+box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 0px 0px 4px 4px;
+}
