--- a/portfolio.css
+++ b/portfolio.css
@@ -33,14 +33,13 @@ body{
   padding: 12px;
   
 }
-ul{
+.buttons-list{
   display: flex;
-  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 .buttons-list .btn-item:not(:first-child){ 
-
-  margin-left: 30px;
-          width: calc((100% - 10 * 8) / 5);
+  margin-left: 30px;   
 }
 .button{
 margin: 8px;
