--- a/style.css
+++ b/style.css
@@ -313,3 +313,13 @@ align-items: center;
 box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 border-radius: 0px 0px 4px 4px;
 }
+.item::before {
+content:"";
+display: block;
+height: 120px;
+background-color: #F5F4FA;
+border-radius: 4px;
+background-image: ; background-repeat: no-repeat;
+background-position: center;
+margin-bottom: 30px;}
+
